--- a/assets/generisch-semibold.css
+++ b/assets/generisch-semibold.css
@@ -15,7 +15,7 @@ License: 	The WebFont(s) listed in this document must follow the YouWorkForThem
 */
 
 @font-face {
-	font-family: 'Generisch';
+	font-family: 'Generisch-Semibold';
 	src: url('generisch-mono-semibold.eot');
 	src: url('generisch-mono-semibold.eot?#iefix') format('embedded-opentype'),
              url('generisch-mono-semibold.woff2') format('woff2'),
