--- a/assets/alliance-light.css
+++ b/assets/alliance-light.css
@@ -1,6 +1,6 @@
 /*
 Font: 		Alliance No.1
-Style: 		Bold
+Style: 		Light
 URL: 		https://www.youworkforthem.com/font/T9667/alliance
 Foundry: 	Degarism Studio
 Foundry: 	https://www.youworkforthem.com/designer/869/degarism-studio
@@ -15,13 +15,13 @@ License: 	The WebFont(s) listed in this document must follow the YouWorkForThem
 */
 
 @font-face {
-	font-family: 'Alliance-Bold';
-	src: url('alliance-no-1-bold.eot');
-	src: url('alliance-no-1-bold.eot?#iefix') format('embedded-opentype'),
-             url('alliance-no-1-bold.woff2') format('woff2'),
-	     url('alliance-no-1-bold.woff') format('woff'),
-	     url('alliance-no-1-bold.ttf') format('truetype'),
-	     url('alliance-no-1-bold.svg#youworkforthem') format('svg');
+	font-family: 'Alliance-Light';
+	src: url('alliance-no-1-light.eot');
+	src: url('alliance-no-1-light.eot?#iefix') format('embedded-opentype'),
+             url('alliance-no-1-light.woff2') format('woff2'),
+	     url('alliance-no-1-light.woff') format('woff'),
+	     url('alliance-no-1-light.ttf') format('truetype'),
+	     url('alliance-no-1-light.svg#youworkforthem') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
