--- a/assets/styles.css
+++ b/assets/styles.css
@@ -6,7 +6,7 @@
 body {
   background-color: black ;
   color: white ;
-  font-family: "Alliance-Light"
+  font-family: "Alliance-Light";
 }
 
 h1, h2, h3, h4{
@@ -51,6 +51,19 @@ nav a {
 
 nav a:nth-child(2) {
     padding-left: 1rem;
+}
+
+span.dot {
+  color: #000;
+  background-color: white;
+  width: 2em;
+  height: 2em;
+  border-radius: 50%;
+  height: 16px;
+  min-width: 14px;
+  padding: 2px 6px 9px 6px;
+  text-align: center;
+  margin-left: -2em;
 }
 
 .work-grid p {
