--- a/assets/styles.css
+++ b/assets/styles.css
@@ -55,15 +55,14 @@ nav a:nth-child(2) {
 
 span.dot {
   color: #000;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.98);
   width: 2em;
   height: 2em;
   border-radius: 50%;
   height: 16px;
   min-width: 14px;
-  padding: 0px 4px 7px 4px;
+  padding: 0px 4px 8px 4px;
   text-align: center;
-  margin-left: -2em;
 }
 
 .work-grid p {
