--- a/assets/styles.css
+++ b/assets/styles.css
@@ -2,7 +2,7 @@
 @import "alliance-light.css";
 @import "alliance-regular.css";
 @import "generisch-regular.css";
-  
+
 body {
   background-color: black ;
   color: white ;
@@ -55,14 +55,15 @@ nav a:nth-child(2) {
 
 span.dot {
   color: #000;
-  background-color: rgba(255, 255, 255, 0.98);
+  background-color: #fff;
   width: 2em;
   height: 2em;
   border-radius: 50%;
   height: 16px;
   min-width: 14px;
-  padding: 0px 4px 8px 4px;
+  padding: 0px 6px 8px 5px;
   text-align: center;
+  letter-spacing: -1px;
 }
 
 .work-grid p {
@@ -87,8 +88,17 @@ span.dot {
  height: 100%;
 }
 
+#disclaimer {
+  transform: rotate(90deg);
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  position: absolute;
+  left: -100px;
+  top: 460px;
+}
+
 @media only screen and (max-width:576px) {
-  
+
   .work {
     margin-left: .75rem;
     margin-right: .75rem;
