--- a/assets/styles.css
+++ b/assets/styles.css
@@ -110,8 +110,25 @@ span.dot {
     font-size: 1.2rem;
   }
 
+  #logo {
+    font-size: 1.25rem;
+  }
+
+  span.dot {
+    color: #000;
+    background-color: #fff;
+    width: 2em;
+    height: 2em;
+    border-radius: 50%;
+    height: 16px;
+    min-width: 14px;
+    padding: 0px 5px 7px 4px;
+    text-align: center;
+    letter-spacing: -1px;
+  }
+
   #navcontainer {
-    margin-top: 6px;
+    margin-top: 3px;
   }
 
   footer a {
