--- a/assets/styles.css
+++ b/assets/styles.css
@@ -106,6 +106,12 @@ span.dot {
 }
 
 @media only screen and (max-width:576px) {
+
+  #container {
+    margin-left: -.5rem;
+    margin-right: -.5rem;
+  }
+
   nav a {
     font-size: 1.2rem;
   }
