updated header column sizes

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -107,11 +107,6 @@ span.dot {
 
 @media only screen and (max-width:576px) {
 
-  #container {
-    margin-left: -.5rem;
-    margin-right: -.5rem;
-  }
-
   nav a {
     font-size: 1.2rem;
   }
@@ -135,6 +130,10 @@ span.dot {
 
   #navcontainer {
     margin-top: 3px;
+  }
+
+  #navcol {
+    max-width: 33%;
   }
 
   footer a {
