--- a/assets/styles.css
+++ b/assets/styles.css
@@ -103,12 +103,13 @@ span.dot {
     margin-left: .75rem;
     margin-right: .75rem;
   }
-}
 
-@media only screen and (max-width:576px) {
+  .row {
+    --bs-gutter-x: 0rem;
+  }
 
   nav a {
-    font-size: 1.2rem;
+    font-size: 1rem;
   }
 
   nav a:nth-child(2) {
@@ -119,9 +120,6 @@ span.dot {
     font-size: 1.25rem;
   }
 
-  .container-fluid {
-    padding: 0px 6px 0px 6px;
-  }
 
   span.dot {
     color: #000;
@@ -137,11 +135,7 @@ span.dot {
   }
 
   #navcontainer {
-    margin-top: 3px;
-  }
-
-  #navcol {
-    max-width: 33%;
+    margin-top: 6px;
   }
 
   footer a {
