--- a/assets/styles.css
+++ b/assets/styles.css
@@ -120,7 +120,10 @@ span.dot {
     font-size: 1.25rem;
   }
 
-
+  .navcol {
+    maxwidth: 33%;
+  }
+  
   span.dot {
     color: #000;
     background-color: #fff;
