--- a/assets/styles.css
+++ b/assets/styles.css
@@ -307,11 +307,13 @@ img {
 	top: 0px;
 	left: 0px;
 	width: 100%;
+	/*
 	z-index: -1;
 	background-size: cover;
 	height: 50vh;
 	background-position: center;
 	opacity: .75;
+	*/
 }
 
 .hero-header-color {
@@ -322,6 +324,12 @@ img {
 	height: 33vh;
 }
 
+.hero-image {
+	z-index: -10;
+	width: 100%;
+	height: 75vh;
+	object-fit: cover;
+}
 
 
 
